fixed some alignment issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,8 @@
 	}
 	#map-canvas 
 	{ 
-		height: 170px; width: 360px; margin: 0; padding: 0;
+		height: 170px; width: 360px; margin-left: 15px;
+
 	}
 
     .comment-item
@@ -87,7 +88,7 @@
     .panel-body
     {
         overflow-y: auto;
-        height: 250px;
+        height: 150px;
     }
 
     ::-webkit-scrollbar-track
